Fix the scrollbars

--- a/src/components/experiment-interactive/ExperimentInteractive/SlotsSelector/slots-selector.module.css
+++ b/src/components/experiment-interactive/ExperimentInteractive/SlotsSelector/slots-selector.module.css
@@ -28,7 +28,7 @@
   place-items: stretch;
   gap: 0;
   height: 95%;
-  overflow: scroll;
+  overflow: auto;
 }
 
 .grid > div {
